# Satisfactory-Prometheus-Exporter

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: routes.py  satisfactory_api.py
cluster/: prometheus-service.yaml  secret.yaml
tests/: test_satisfactory_api.py
